[package]
name = "RustBoy"
version = "0.1.0"
authors = ["Guillaume <guiguiruff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.3"

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["image"]
