[package]
name = "rust_boy"
version = "1.0.0"
authors = ["Guillaume <guiguiruff@gmail.com>", "Paul <paul.caillier@utbm.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.3"

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["image"]
