[package]
name = "rust_boy"
version = "1.0.0"
authors = ["Guillaume <guiguiruff@gmail.com>", "Paul <paul.caillier@utbm.fr>"]
edition = "2018"
description = "A gameboy emulator in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.3"
clap = "~2.33"
serde = { version = "~1.0", features = ["derive"] }
bincode = "~1.3"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["image", "gfx", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "261c458af6e3eed5d099144aff95d2b5035f656b"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
